--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,7 @@
     ],
     "require": {
         "livewire/livewire": "^3.0"
-    }
+    },
+    "minimum-stability": "beta",
+    "prefer-stable": true
 }
